--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
         <script>
             
             function Hello(props) {
-                return (
-                    <div>
-                        <h1> Hello {props.name} welcome to REACT</h1>
-                        <h2> The best PS3 Game made was {props.game}</h2>
-                    </div>
-                );
+                return <h1> Hello {props.name} welcome to REACT!!! The best PS3 game is {props.game}</h1>;
             }
             
             const element = <Hello name="Nicholas" game="The Last of Us"/>;
