--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="root"></div>
 
-        <script>
+        <script type="text/jsx">
             
             function Hello(props) {
                 return <h1> Hello {props.name} welcome to REACT!!! The best PS3 game is {props.game}</h1>;
