--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <script type="javascript">
             
             function Hello(props) {
-                return <h1> Hello {props.name} welcome to REACT!!! The best PS3 game is {props.game}</h1>;
+                return <h1> Hello {props.name} welcome to REACT!!!</h1>;
             }
             
-            const element = <Hello name="Nicholas" game="The Last of Us"/>;
+            const element = <Hello name="Nicholas"/>;
             ReactDOM.render(
                element, document.getElementById("root");
             );
