--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="root"></div>
 
-        <script type="javascript">
+        <script>
             
             function Hello(props) {
                 return <h1> Hello {props.name} welcome to REACT!!!</h1>;
