--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             
             const element = <Hello name="Nicholas"/>;
             ReactDOM.render(
-               element, document.getElementById("root");
+               element, document.getElementById("root")
             );
             
             /*window.onload = function()
